--- a/<DOCTYPE html>.html
+++ b/<DOCTYPE html>.html
@@ -3,17 +3,17 @@
 <html lang="pt" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Cursos técnicos de Karatê</title>
+    <title>Academia Esparta</title>
     <link rel="stylesheet"href="index.css">
   </head>
     <body>
 
       <header>
     <div class="texto principal">
-      <h1>Curso técnico para alunos do ensino fundamental</h1>
+      <h1> Saúde e Bem-Estar</h1>
       <img id="imagem principal" src="coding-image.png">
 
-      <h2>Este curso tem como objetivo <b>aspectos técnicos</b>  de praticantes da modalidade no ensino fundamental</h2>
+      <h2> Temos como objetivo proporcionar uma  de praticantes da modalidade no ensino fundamental</h2>
       <p>Este, faz parte do projeto social da modalidade o qual é dedicado a alunos do estado do Paraná</p>
           </div>
           <div>class="lista">
